<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hotel Manager</string>
    <string name="settings">Settings</string>
    <string name="sound_level">Sound level</string>
    <string name="sound_level_summary">Set the minimum sound level in decibels as a border above which the app will alert you of noise</string>
    <string name="min_temperature">Minimum allowed temperature</string>
    <string name="min_temperature_sum">Set the minimum temperature in celsius bellow which the app will alert you of the coldness in the rooms.</string>
    <string name="max_temperature_sum">Set the maximum temperature in celsius above which the app will alert you of the hotness in the rooms.</string>
    <string name="max_temperature">Maximum allowed temperature</string>
    <string name="min_temp_key">min_temperature_preference</string>
    <string name="max_temp_key">max_temperature_preference</string>
    <string name="sound_limit_key">50</string>

    <string name="default_min_temp">20</string>
    <string name="default_max_temp">25</string>

    <string name="sound_limit_default">80</string>

    <string name="rooms">Rooms with WunderBars</string>

    <string-array name="temperature_values">
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>
        <item>"25"</item>
        <item>"26"</item>
        <item>"27"</item>
        <item>"28"</item>
        <item>"29"</item>
        <item>"30"</item>
    </string-array>

    <string-array name="temperature_names">
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>
        <item>"25"</item>
        <item>"26"</item>
        <item>"27"</item>
        <item>"28"</item>
        <item>"29"</item>
        <item>"30"</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="temp_hum">Temperature / Humidity</string>
    <string name="sound">Sound</string>
    <string name="light">Light</string>
    <string name="room_is_empty">Light is on, but sound is low. Check if room is empty</string>

</resources>
